1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (val_t): Add _uint, _ulong, and _long.

	* VarProbe.m ([VarProbe -createEnd]): Add support for long
	and unsigned long.
	([VarProbe -probeAsPointer:]): Likewise.
	([VarProbe -probeAsInt:]): Likewise.
	([VarProbe -probeAsDouble:]): Likewise.
	([VarProbe -probeAsString:Buffer:withFullPrecision:]): Likewise.
	([VarProbe -setData:To:]): Likewise.
	([VarProbe -setData:ToString:]): Likewise.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): Add
	support for unsigned int, long, and unsigned long.
	(dynamicCallOn): Likewise.
	([MessageProbe -doubleDynamicCallOn:]): Likewise.

	* Arguments.m ([Arguments -parseKey:arg:]): --mode option
	incorrectly tagged `a' (now `m').

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
	(version.h): Only use sed for extracting version components.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VarProbe.m ([VarProbe -setProbedVariable:], 
	([VarProbe -free]): use XFREE instead of xfree.

	* Arguments.m ([Arguments -getAppConfigPath], [Arguments
	-getAppDataPath]): Copy default value to heap.
	(findDirectory, countSlashes, [Arguments -_getPath_:subpath:],
	[Arguments -_runningFromInstall_]): Use XFREE instead of xfree.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m (ensureEndingSlash): New function.
	([Arguments -setDefaultAppConfigPath:], [Arguments
	-setDefaultAppDataPath:]): Use it.
	([Arguments -_getPath_:subpath:]): New method.
	([Arguments -getConfigPath], [Arguments -getDataPath]): Use it
	(latter is new).
	([Arguments -_runningFromInstall_], [Arguments
	-_appendAppName_:]):
	([Arguments -getAppConfigPath], [Arguments -getAppDataPath]): Use
	them (latter is new).
	(SIGNATURE_SUBPATH, SIGNATURE, SIGNATURE_PATH): Versions for 
	subdirectory, file, and combined.  SIGNATURE is now Makefile.appl
	instead of VERSION.
